--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 	<section>
 		<h1 class="full_name">Zhdanovich Helen</h1>
-		<p>Programmer - Web Designer</p>	
+		<p>Programmer - <span>Web Designer</span></p>
+		
 	</section>
 </body>
 </html>
