fix: Trailing whitespace

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 	<section>
 		<h1 class="full_name">Zhdanovich Helen</h1>
-		<p>Programmer - <span>Web Designer</span></p>
-		
+		<p>Programmer - Web Designer</p>
 	</section>
 </body>
 </html>
